<resources>
    <string name="app_name">AlDi App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_fragment_input_name">Nombre de la app o servicio</string>
    <string name="add_fragment_input_user">Usuario o mail</string>
    <string name="add_fragment_input_pass">Contraseña</string>
    <string name="add_fragment_btn_save">Guardar</string>
    <string name="add_fragment_btn_clear">Borrar</string>
    <string name="add_fragment_title">Completa la data que quieres guardar</string>
    <string name="detail_fragment_btn_edit">Editar</string>
    <string name="detail_fragment_btn_save">Guardar</string>
    <string name="add_fragment_error_text">Este campo no puede estar vacio</string>
</resources>