<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/add_fragment_input_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_app_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/add_fragment_input_user"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/txl_app_name"
            app:layout_constraintStart_toStartOf="@+id/txl_app_name"
            app:layout_constraintTop_toBottomOf="@+id/txl_app_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_app_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_app_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/add_fragment_input_pass"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/txl_app_name"
            app:layout_constraintStart_toStartOf="@+id/txl_app_name"
            app:layout_constraintTop_toBottomOf="@+id/txl_app_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_app_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_app_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_fragment_btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txl_app_name"
            app:layout_constraintTop_toBottomOf="@+id/txl_app_pass" />

        <Button
            android:id="@+id/btn_app_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/add_fragment_btn_clear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintBottom_toBottomOf="@+id/btn_app_save"
            app:layout_constraintEnd_toStartOf="@+id/btn_app_save"
            app:layout_constraintTop_toTopOf="@+id/btn_app_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>