<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                tools:hint="ejemplo"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_detail_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/add_fragment_input_user"
            app:errorEnabled="true"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@+id/txl_detail_name"
            app:layout_constraintStart_toStartOf="@+id/txl_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/txl_detail_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_detail_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txl_detail_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/add_fragment_input_pass"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@+id/txl_detail_name"
            app:layout_constraintStart_toStartOf="@+id/txl_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/txl_detail_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_detail_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_detail_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/detail_fragment_btn_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txl_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/txl_detail_pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>